# api-product/storage/swagger/swagger.json
@@ -1,17 +1,236 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "Laravel",
+        "title": "API_PRODUCT",
         "description": "Documentation for the Application API",
         "version": "1.0.0"
     },
     "servers": [
         {
-            "url": "http://127.0.0.1:8000documentation",
-            "description": "Laravel Server #1"
+            "url": "http://hubii_api_product/api",
+            "description": "API_PRODUCT Server #1"
         }
     ],
-    "paths": [],
+    "paths": {
+        "/products": {
+            "get": {
+                "summary": "Get Products",
+                "description": "",
+                "deprecated": false,
+                "responses": {
+                    "200": {
+                        "description": "Get Products",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Product"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "(Unauthorized) Invalid or missing Access Token"
+                    }
+                },
+                "tags": [
+                    "products"
+                ]
+            },
+            "post": {
+                "summary": "Store a newly created resource in storage.",
+                "description": "",
+                "deprecated": false,
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "401": {
+                        "description": "(Unauthorized) Invalid or missing Access Token"
+                    }
+                },
+                "requestBody": {
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "required": [
+                                    "name",
+                                    "description",
+                                    "price",
+                                    "vendor",
+                                    "product_type",
+                                    "status",
+                                    "quantity",
+                                    "image"
+                                ],
+                                "properties": {
+                                    "name": {
+                                        "type": "string",
+                                        "pattern": "/^[A-Za-z]+$/"
+                                    },
+                                    "description": {
+                                        "type": "string"
+                                    },
+                                    "price": {
+                                        "type": "number"
+                                    },
+                                    "vendor": {
+                                        "type": "string"
+                                    },
+                                    "product_type": {
+                                        "type": "string"
+                                    },
+                                    "status": {
+                                        "type": "string",
+                                        "maxLength": 20
+                                    },
+                                    "quantity": {
+                                        "type": "integer"
+                                    },
+                                    "image": {
+                                        "type": "string",
+                                        "format": "binary"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "tags": [
+                    "products"
+                ]
+            }
+        },
+        "/products/{id}": {
+            "get": {
+                "summary": "Display the specified resource.",
+                "description": "",
+                "deprecated": false,
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "401": {
+                        "description": "(Unauthorized) Invalid or missing Access Token"
+                    }
+                },
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "description": "",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "tags": [
+                    "products"
+                ]
+            },
+            "put": {
+                "summary": "Update the specified resource in storage.",
+                "description": "",
+                "deprecated": false,
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "401": {
+                        "description": "(Unauthorized) Invalid or missing Access Token"
+                    }
+                },
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "description": "",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "required": [
+                                    "name",
+                                    "description",
+                                    "price",
+                                    "vendor",
+                                    "product_type",
+                                    "status",
+                                    "quantity",
+                                    "image"
+                                ],
+                                "properties": {
+                                    "name": {
+                                        "type": "string",
+                                        "pattern": "/^[A-Za-z]+$/"
+                                    },
+                                    "description": {
+                                        "type": "string"
+                                    },
+                                    "price": {
+                                        "type": "number"
+                                    },
+                                    "vendor": {
+                                        "type": "string"
+                                    },
+                                    "product_type": {
+                                        "type": "string"
+                                    },
+                                    "status": {
+                                        "type": "string",
+                                        "maxLength": 20
+                                    },
+                                    "quantity": {
+                                        "type": "integer"
+                                    },
+                                    "image": {
+                                        "type": "string",
+                                        "format": "binary"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "tags": [
+                    "products"
+                ]
+            },
+            "delete": {
+                "summary": "Remove the specified resource from storage.",
+                "description": "",
+                "deprecated": false,
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "401": {
+                        "description": "(Unauthorized) Invalid or missing Access Token"
+                    }
+                },
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "description": "",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "tags": [
+                    "products"
+                ]
+            }
+        }
+    },
     "tags": [],
     "components": {
         "schemas": {
@@ -22,7 +241,7 @@
                         "type": "integer",
                         "description": "integer",
                         "nullable": false,
-                        "example": 1000589603
+                        "example": 1463485140
                     },
                     "name": {
                         "type": "string",
@@ -65,7 +284,7 @@
                         "type": "integer",
                         "description": "integer",
                         "nullable": false,
-                        "example": 1277380548
+                        "example": 1548233836
                     },
                     "image": {
                         "type": "string",
@@ -102,7 +321,7 @@
                         "type": "integer",
                         "description": "integer",
                         "nullable": false,
-                        "example": 1027860037
+                        "example": 1481376816
                     },
                     "name": {
                         "type": "string",
@@ -145,7 +364,7 @@
                         "type": "integer",
                         "description": "integer",
                         "nullable": false,
-                        "example": 1340026741
+                        "example": 1844104873
                     },
                     "image": {
                         "type": "string",
